# AtlasVault

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/atlasvault/: __init__.py  cli.py  config.py  library.py  manifest.py  metadata.py  schema.py
tests/: test_config.py
